--- a/savethechildren/style/style-story.css
+++ b/savethechildren/style/style-story.css
@@ -112,6 +112,7 @@
   border: 1px solid white;
   color: black;
   position: relative;
+  overflow: hidden;
 }
 
 .homebtn {
@@ -366,6 +367,8 @@
   padding-right: 30px;
   box-sizing: border-box;
   border: 1px solid white;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .extra-boxes {
@@ -442,8 +445,8 @@ p.paragraph {
   left: 0;
   transform: none;
   width: 100%;
+  margin-bottom: 4vh;
 }
-
 .account-name {
   font-weight: 600;
   font-size: 20px;
