--- a/proudboys/style/style-story.css
+++ b/proudboys/style/style-story.css
@@ -259,28 +259,38 @@
 }
 
 .popup-box {
-  height: 100%;
-  width: 100%;
+  height: 97%;
+  width: 55%;
   position: absolute;
   top: 50%;
   left: 50%;
+  box-sizing: border-box;
   transform: translate(-50%, -50%);
   background-color: #efefef;
   text-align: center;
-  border: 2px solid white;
-  border-left: 0;
-  box-shadow: 1px 1px 15px black;
+  border: 1vw solid #efefef;
+  border-top: 2.5vh solid #efefef;
+  border-bottom: 2.5vh solid #efefef;
+  /*box-shadow: 1px 1px 15px black;*/
   overflow: hidden;
 }
 
 .close-btn {
-  height: 20px;
-  width: 20px;
-  background-image: url("../assets/closebtn.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  position: fixed;
+  height: 14.5%;
+  width: 17.8%;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  z-index: 1000;
+}
+
+.continue-text {
+  position: absolute;
+  font-size: 2.4vh;
+  font-weight: 400;
+  top: 75%;
+  left: 50%;
+  color: rgba(0,0,0,0.5)
 }
 
 .close-btn2 {
@@ -304,7 +314,7 @@
 .tweet-content {
   height: 100%;
   width: 100%;
-  /*background-color: black;*/
+  background-color: white;
   position: absolute;
   left: 0;
   top: 0;
@@ -322,7 +332,7 @@
 }
 
 .tweet-media {
-  height: 75%;
+  height: 70%;
   width: 100%;
   position: absolute;
   top: 0
@@ -348,7 +358,7 @@
 }
 
 .tweet-text {
-  height: 25%;
+  height: 30%;
   left: 0;
   position: absolute;
   bottom: 0;
@@ -358,16 +368,19 @@
 }
 
 .white-box {
-  width: 50%;
-  height: 100%;
+  width: 60%;
+  height: 93%;
   background-color: white;
   padding-top: 10px;
   padding-left: 10px;
   padding-right: 30px;
   box-sizing: border-box;
-  border: 1px solid white;
   overflow-x: hidden;
   overflow-y: auto;
+  border-radius: 10px;
+  border: 2px solid #efefef;
+  margin: 5px;
+  display: inline-block;
 }
 
 .extra-boxes {
@@ -388,9 +401,9 @@
 .profile-image-container {
   position: relative;
   display: inline-block;
-  height: 45px;
-  margin-top: 10px;
-  margin-left: 15px;
+  height: 6vh;
+  margin-top: 1vh;
+  margin-left: 1vw;
   border-radius: 50%;
   overflow: hidden;
   vertical-align: middle;
@@ -407,11 +420,12 @@
   position: relative;
   display: inline-block;
   margin: 0;
+  line-height: 1.3vh;
 }
 
 p.account {
   margin: 0;
-  margin-left: 10px;
+  margin-left: 1vw;
   top: 0;
   left: 0;
   transform: none;
@@ -422,19 +436,15 @@ p.account {
 .account-container {
   display: inline-block;
   position: relative;
-  margin-top: 15px;
+  margin-top: 1vh;
   vertical-align: middle;
-}
-
-.account {
-  line-height: 10px;
 }
 
 .text-container {
   position: relative;
   width: auto;
-  margin-top: 20px;
-  margin-left: 70px;
+  margin-top: 1.5vh;
+  margin-left: 5vw;
   margin-right: 15px;
 }
 
@@ -445,40 +455,99 @@ p.paragraph {
   transform: none;
   width: 100%;
   margin-bottom: 4vh;
+  font-size: 1.8vh;
 }
 
 .account-name {
   font-weight: 600;
-  font-size: 20px;
+  font-size: 2.5vh;
   display: table-cell;
   vertical-align: text-top;
 }
 
 .handle {
   font-weight: 300;
-  font-size: 15px;
+  font-size: 2vh;
 }
 
 .tweet-image {
   width: 100%;
 }
 
-.extra-boxes {
-  width: 50%;
-  height: 25%;
-  box-sizing: border-box;
-  text-align: left;
+.tweet-info {
+  text-align: center;
+  width: 35%;
+  height: 93%;
+  display: inline-block;
   font-size: 0;
+  box-sizing: border-box;
+  margin-top: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  border-radius: 10px;
+  margin: 5px;
+  position: absolute;
 }
 
-.extra {
-  height: 100%;
-  width: 33.33%;
-  background-color: green;
-  box-sizing: border-box;
-  border: 1px solid white;
-  position: relative;
-  display: inline-block;
+.tweet-info-text {
+  position: absolute;
+  font-size: 2.4vh;
+  font-weight: 400;
+  top: 75%;
+  left: 50%;
+  color: rgba(0,0,0,0.5)
+}
+
+.icon {
+  width: 50%;
+  height: auto;
   margin: 0;
-  background-color: transparent;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.icon img {
+  object-fit: contain;
+}
+
+.space {
+  height: 50%;
+  width: 50%;
+  display: inline-block;
+  border: 1px solid #efefef;
+  box-sizing: border-box;
+  overflow: hidden;
+  text-align: center;
+  line-height: 0;
+  position: absolute;
+}
+
+#space1 {
+  border-left: 0;
+  border-top: 0;
+  left: 0;
+  top: 0;
+}
+
+#space2 {
+  border-top: 0;
+  border-right: 0;
+  top: 0;
+  right: 0;
+}
+
+#space3 {
+  border-bottom: 0;
+  border-left: 0;
+  bottom: 0;
+  left: 0;
+}
+
+#space4 {
+  border-right: 0;
+  border-bottom: 0;
+  bottom: 0;
+  right: 0;
 }
