--- a/proudboys/style/style.css
+++ b/proudboys/style/style.css
@@ -32,7 +32,12 @@ p.title {
   color: white;
   font-family: "IBM Plex Mono", monospace;
   text-transform: uppercase;
+  letter-spacing: 0.3vw;
 }
+
+/*.shorter-tweet {
+  height: 50%;
+}*/
 
 .title-line {
   position: absolute;
@@ -44,10 +49,12 @@ p.title {
 
 .start {
   text-decoration: underline;
+  font-size: 1.1vw;
 }
 
 .home {
   color: white;
+  font-size: 1.1vw;
 }
 
 #wraper {
