--- a/savethechildren/style/style.css
+++ b/savethechildren/style/style.css
@@ -17,8 +17,44 @@ p {
   font-weight: 500;
 }
 
+#box4 {
+  text-align: center;
+}
+
+p.title {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.3vw;
+  margin: 0;
+  font-weight: 400;
+  color: white;
+  font-family: "IBM Plex Mono", monospace;
+  text-transform: uppercase;
+  letter-spacing: 0.3vw;
+}
+
+/*.shorter-tweet {
+  height: 50%;
+}*/
+
+.title-line {
+  position: absolute;
+  bottom: 0;
+  left: 49.8%;
+  height: 50%;
+  border: 1px solid white;
+}
+
 .start {
   text-decoration: underline;
+  font-size: 1.1vw;
+}
+
+.home {
+  color: white;
+  font-size: 1.1vw;
 }
 
 #wraper {
@@ -50,6 +86,10 @@ p {
   overflow-y: scroll;
 }
 
+#box4 {
+  overflow: hidden;
+}
+
 .off {
   background-color: rgba(0,0,0,0) !important;
 }
@@ -64,7 +104,7 @@ p {
 
 #image-wraper {
   height: 100%;
-  width: 62.5%;
+  width: 100%;
   position: absolute;
   font-size: 0;
   text-align: center;
@@ -86,7 +126,7 @@ p {
 }
 
 #image-open {
-  background-image: url("../assets/proudboy-intro.png");
+  background-image: url("../assets/proudboys-intro.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -99,12 +139,10 @@ p {
   cursor: pointer;
 }
 
-.title {
+#title {
   position: absolute;
   z-index: 1000;
   font-family: 'IBM Plex Mono', monospace;
-  top: 20%;
-  left: 11%;
 }
 
 .intro-text {
