starting page savethechildren

--- a/savethechildren/style/style.css
+++ b/savethechildren/style/style.css
@@ -126,7 +126,7 @@ p.title {
 }
 
 #image-open {
-  background-image: url("../assets/proudboys-intro.jpg");
+  background-image: url("../assets/savethechildren-intro.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
