--- a/about/style/style-story.css
+++ b/about/style/style-story.css
@@ -26,6 +26,7 @@
 
 #wraper-content {
   height: auto;
+  width: 87.5%;
   position: absolute;
   font-size: 0;
   text-align: center;
@@ -37,6 +38,8 @@
 
 #fixedbar {
   height: auto;
+  width: 12.5%;
+  max-width: 12.5%;
   font-size: 0;
   text-align: center;
   position: fixed;
@@ -45,6 +48,7 @@
   top: 0;
   left: 0;
 }
+
 
 .sticky {
 
@@ -452,4 +456,61 @@ p.paragraph {
   display: inline-block;
   margin: 0;
   background-color: transparent;
+}
+
+.protocol1, .protocol2, .protocol3, .protocol4 {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.protocol1 {
+  background-image: url("../assets/protocol1.png")
+}
+
+.protocol2 {
+  background-image: url("../assets/protocol2.png")
+}
+
+
+.protocol3 {
+  background-image: url("../assets/protocol3.png")
+}
+
+
+.protocol4 {
+  background-image: url("../assets/protocol4.png")
+}
+
+#images-container {
+  height: 100vh;
+  width: 100vw;
+}
+
+#img1 {
+  background-image: url("../assets/img1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  position: absolute;
+  left: 25%;
+  top: 125%;
+  height: 50%;
+  width: 50%;
+}
+
+#img2 {
+  background-image: url("../assets/img2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  position: absolute;
+  left: 50%;
+  top: 325%;
+  height: 100%;
+  width: 50%;
+}
+
+.off {
+  opacity: 0;
 }
