--- a/about/style/style.css
+++ b/about/style/style.css
@@ -51,7 +51,7 @@ p {
 .box2 {
   text-align: left;
   font-family: 'IBM Plex Serif', serif;
-  line-height: 3.8vh;
+  line-height: 23px;
   overflow-y: auto;
 }
 
