--- a/savethechildren/style/style-story.css
+++ b/savethechildren/style/style-story.css
@@ -148,6 +148,15 @@
   overflow-x: hidden;
 }
 
+.narrator-box-final p {
+  position: relative;
+  top: 0;
+  left: 0;
+  transform: none;
+  margin-left: 2vw;
+  margin-top: 3vh;
+}
+
 #date-container {
   font-family: 'IBM Plex Mono', monospace;
   text-transform: uppercase;
@@ -159,6 +168,11 @@
 }
 
 .day {
+  font-size: 100%;
+  font-weight: 600;
+}
+
+.day2 {
   font-size: 100%;
   font-weight: 600;
 }
@@ -212,10 +226,6 @@
 .narrator-text {
   font-size: 1vw;
   width: 75%;
-}
-
-.narrator-text-final {
-  margin-top: 50%;
 }
 
 .clickHere {
@@ -607,4 +617,18 @@ p.paragraph {
   border-bottom: 0;
   bottom: 0;
   right: 0;
+}
+
+#content-wraper2 {
+  -moz-box-shadow:    inset 0 0 20px #ffd600;
+   -webkit-box-shadow: inset 0 0 20px #ffd600;
+   box-shadow:         inset 0 0 20px #ffd600;
+   height: 100%;
+   width: 25%;
+   position: absolute;
+   font-size: 0;
+   text-align: center;
+   left: 0;
+   top: 0;
+   visibility: hidden;
 }
