--- a/millionmagamarch/style/style-story.css
+++ b/millionmagamarch/style/style-story.css
@@ -356,9 +356,12 @@
 }
 
 .close-btn2 {
-  height: 20px;
-  width: 20px;
-  background-image: url("../assets/closebtn.png");
+  height: 50px;
+  width: 50px;
+  bottom: 7%;
+  left: 62.5% !important;
+  transform: translateX(-50%);
+  background-image: url("../assets/closebtn.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
