--- a/proudboys/style/style-story.css
+++ b/proudboys/style/style-story.css
@@ -354,15 +354,17 @@
 }
 
 .close-btn2 {
-  height: 20px;
-  width: 20px;
-  background-image: url("../assets/closebtn.png");
+  height: 50px;
+  width: 50px;
+  bottom: 7%;
+  left: 62.5% !important;
+  transform: translateX(-50%);
+  background-image: url("../assets/closebtn.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   position: fixed;
 }
-
 #content-wraper2 {
   -moz-box-shadow:    inset 0 0 20px #4364ed;
    -webkit-box-shadow: inset 0 0 20px #4364ed;
