--- a/savethechildren/style/style-story.css
+++ b/savethechildren/style/style-story.css
@@ -297,6 +297,20 @@
   overflow: hidden;
 }
 
+.popup-box2 {
+  height: 75%;
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  box-sizing: border-box;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0,0,0,0);
+  text-align: center;
+  /*box-shadow: 1px 1px 15px black;*/
+  overflow: hidden;
+}
+
 .popup-box3 {
   height: 35%;
   width: 55%;
@@ -347,9 +361,12 @@
 }
 
 .close-btn2 {
-  height: 20px;
-  width: 20px;
-  background-image: url("../assets/closebtn.png");
+  height: 50px;
+  width: 50px;
+  bottom: 7%;
+  left: 62.5% !important;
+  transform: translateX(-50%);
+  background-image: url("../assets/closebtn.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -631,4 +648,15 @@ p.paragraph {
    left: 0;
    top: 0;
    visibility: hidden;
+}
+
+.news {
+  width: 100%;
+  height: 100%;
+}
+
+.news img {
+  object-fit: contain;
+  width: 800px;
+  height: auto;
 }
