--- a/about/style/style-story.css
+++ b/about/style/style-story.css
@@ -1,29 +1,3 @@
-.clickable {
-  background-color: rgba(0,0,0,0);
-  border: 0;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  position: absolute;
-}
-
-.clickable:active {
-  background-color: rgba(0,0,0,0);
-  border: 0;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  position: absolute;
-}
-
-.clickable:enabled:hover {
-  cursor: pointer;
-}
-
 #wraper-content {
   height: auto;
   width: 87.5%;
@@ -49,11 +23,6 @@
   left: 0;
 }
 
-
-.sticky {
-
-}
-
 .box {
   display: inline-block;
   box-sizing: border-box;
@@ -71,373 +40,6 @@
 
 #footer {
   background-color: black;
-}
-
-.tweet {
-  background-color: rgba(239,239,239,1);
-}
-
-.invisible {
-  opacity: 0;
-}
-
-.fixedbox {
-  display: inline-block;
-  box-sizing: border-box;
-  margin: 0;
-  border: 0;
-  background-color: #efefef;
-  border: 1px solid white;
-  color: black;
-  position: relative;
-}
-
-.homebtn {
-  background-color: #4568e9;
-}
-
-.narrator-box-final {
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-#date-container {
-  font-family: 'IBM Plex Mono', monospace;
-  text-transform: uppercase;
-}
-
-#number-tweets-container {
-  width: 100%;
-  padding: 0;
-}
-
-.day {
-  font-size: 100%;
-  font-weight: 600;
-}
-
-.month {
-  font-size: 120%;
-  font-weight: 600;
-}
-
-.number-tweets {
-  font-weight: 600;
-  font-size: 100%;
-}
-
-.number-tweet-info {
-  width: 100%;
-}
-
-.w-proudboys, .that-month {
-  font-size: 70%;
-}
-
-.month2 {
-  font-size: 150%;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.media1 {
-  background-image: url("../assets/media1.jpg");
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: grayscale(100%);
-  -moz-box-shadow:    inset 0 0 10px white;
-   -webkit-box-shadow: inset 0 0 10px white;
-   box-shadow:         inset 0 0 10px white;
-}
-
-.media2 {
-  background-image: url("../assets/media2.jpg");
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: grayscale(100%);
-  -moz-box-shadow:    inset 0 0 10px white;
-   -webkit-box-shadow: inset 0 0 10px white;
-   box-shadow:         inset 0 0 10px white;
-}
-
-.narrator-text {
-  font-size: 1vw;
-  width: 75%;
-}
-
-.narrator-text-final {
-  margin-top: 50%;
-}
-
-.clickHere {
-  text-transform: uppercase;
-  font-family: 'IBM Plex Mono', monospace;
-}
-
-.clickNext {
-  /*border: 1px solid #4568e9;*/
-  -moz-box-shadow:    inset 0 0 5px #4568e9;
-   -webkit-box-shadow: inset 0 0 5px #4568e9;
-   box-shadow:         inset 0 0 5px #4568e9;
-}
-
-.clickNext2 {
-  /*border: 1px solid #4568e9;*/
-  -moz-box-shadow:    inset 0 0 5px #FF6679;
-   -webkit-box-shadow: inset 0 0 5px #FF6679;
-   box-shadow:         inset 0 0 5px #FF6679;
-}
-
-.clickNext:hover {
-  cursor: pointer;
-}
-
-.clickNext2:hover {
-  cursor: pointer;
-}
-
-/* popup */
-
-.popup-overlay {
-  height: 100%;
-  width: 75%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-  visibility: hidden;
-}
-
-.popup-overlay2 {
-  height: 100%;
-  width: 75%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-  visibility: hidden;
-}
-
-.popup-box {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #efefef;
-  text-align: center;
-  border: 2px solid white;
-  border-left: 0;
-  box-shadow: 1px 1px 15px black;
-  overflow: hidden;
-}
-
-.close-btn {
-  height: 20px;
-  width: 20px;
-  background-image: url("../assets/closebtn.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  position: fixed;
-}
-
-.close-btn2 {
-  height: 20px;
-  width: 20px;
-  background-image: url("../assets/closebtn.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  position: fixed;
-}
-
-.close-btn:hover {
-  cursor: pointer;
-}
-
-.close-btn2:hover {
-  cursor: pointer;
-}
-
-.tweet-content {
-  height: 100%;
-  width: 100%;
-  /*background-color: black;*/
-  position: absolute;
-  left: 0;
-  top: 0;
-  /*transform: translate(-50%, -50%);*/
-}
-
-.media-content {
-  height: auto;
-  width: auto;
-  /*background-color: black;*/
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.tweet-media {
-  height: 75%;
-  width: 100%;
-  position: absolute;
-  top: 0
-  left 50%;
-  box-sizing: border-box;
-  background-color: black;
-}
-
-.tweet-media img {
-  width: auto;
-  height: 100%;
-  max-width: 100%;
-  object-fit: contain;
-  position: relative;
-}
-
-.tweet-media video {
-  width: auto;
-  height: 100%;
-  max-width: 100%;
-  object-fit: contain;
-  position: relative;
-}
-
-.tweet-text {
-  height: 25%;
-  left: 0;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: left;
-  box-sizing: border-box;
-}
-
-.white-box {
-  width: 50%;
-  height: 100%;
-  background-color: white;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 30px;
-  box-sizing: border-box;
-  border: 1px solid white;
-}
-
-.extra-boxes {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-.link {
-  color: blue;
-}
-
-.paragraph {
-  font-size: 1vw;
-  position: relative;
-}
-
-.profile-image-container {
-  position: relative;
-  display: inline-block;
-  height: 38px;
-  margin-top: 10px;
-  margin-left: 15px;
-  border-radius: 50%;
-  overflow: hidden;
-  vertical-align: middle;
-}
-
-.profile-image {
-  height: 100%;
-  width: auto;
-  object-fit: cover;
-  position: relative;
-}
-
-.account {
-  position: relative;
-  display: inline-block;
-  margin: 0;
-}
-
-p.account {
-  margin: 0;
-  margin-left: 10px;
-  top: 0;
-  left: 0;
-  transform: none;
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
-
-.account-container {
-  display: inline-block;
-  position: relative;
-  margin-top: 15px;
-  vertical-align: middle;
-}
-
-.text-container {
-  position: relative;
-  width: auto;
-  margin-top: 20px;
-  margin-left: 70px;
-  margin-right: 15px;
-}
-
-p.paragraph {
-  position: relative;
-  top: 0;
-  left: 0;
-  transform: none;
-  width: 100%;
-}
-
-.account-name {
-  font-weight: 600;
-  font-size: 18px;
-  display: table-cell;
-  vertical-align: text-top;
-}
-
-.handle {
-  font-weight: 300;
-  font-size: 13px;
-}
-
-.tweet-image {
-  width: 100%;
-}
-
-.extra-boxes {
-  width: 50%;
-  height: 25%;
-  box-sizing: border-box;
-  text-align: left;
-  font-size: 0;
-}
-
-.extra {
-  height: 100%;
-  width: 33.33%;
-  background-color: green;
-  box-sizing: border-box;
-  border: 1px solid white;
-  position: relative;
-  display: inline-block;
-  margin: 0;
-  background-color: transparent;
 }
 
 .protocol1, .protocol2, .protocol3, .protocol4 {
@@ -517,4 +119,14 @@ p.paragraph {
 
 .download-btn:hover {
   cursor: pointer;
+}
+
+.homebtn {
+  background-color: #4568e9;
+}
+
+.homebtn p {
+  font-weight: 500;
+  font-size: 1.1vw;
+  letter-spacing: 3pt;
 }
