--- a/savethechildren/style/style-story.css
+++ b/savethechildren/style/style-story.css
@@ -139,8 +139,8 @@
   color: black;
   position: relative;
   text-align: left;
-  font-family: 'IBM Plex Serif', serif;
-  line-height: 3.8vh;
+  font-family: 'Work Sans', sans-serif;
+  line-height: 24px;
 }
 
 .narrator-box-final {
@@ -659,4 +659,14 @@ p.paragraph {
   object-fit: contain;
   width: 800px;
   height: auto;
+}
+
+.white-box::-webkit-scrollbar { width: 0 !important }
+.white-box { overflow: -moz-scrollbars-none; }
+.white-box { -ms-overflow-style: none; }
+
+.next {
+  font-weight: 500;
+  font-size: 1.1vw;
+  letter-spacing: 3pt;
 }
