--- a/savethechildren/style/style.css
+++ b/savethechildren/style/style.css
@@ -49,12 +49,15 @@ p.title {
 
 .start {
   text-decoration: underline;
+  font-weight: 500;
   font-size: 1.1vw;
+  letter-spacing: 3pt;
 }
 
 .home {
-  color: white;
+  font-weight: 500;
   font-size: 1.1vw;
+  letter-spacing: 3pt;
 }
 
 #wraper {
@@ -81,8 +84,8 @@ p.title {
 
 .box2 {
   text-align: left;
-  font-family: 'IBM Plex Serif', serif;
-  line-height: 3.8vh;
+  font-family: 'Work Sans', sans-serif;
+  line-height: 24px;
   overflow-y: scroll;
 }
 
