--- a/menu/style/style.css
+++ b/menu/style/style.css
@@ -41,7 +41,7 @@ p.tag-selection {
   margin: 0;
   transform: translate(-50%, -50%);
   text-transform: uppercase;
-  font-weight: regular;
+  font-weight: normal;
   font-size: 1.1vw;
   letter-spacing: 3pt;
   font-family: "IBM Plex Mono", monospace;
