--- a/warning/style/style.css
+++ b/warning/style/style.css
@@ -71,10 +71,10 @@ p {
 .line1 {
   position: absolute;
   bottom: 0;
-  left: 50%;
+  left: 49.8%;
   height: 0;
   border: 1px solid #4364ed;
-  opacity: 0;
+  height: 100%;
 }
 
 video {
