exit story button

--- a/proudboys/style/style.css
+++ b/proudboys/style/style.css
@@ -176,3 +176,34 @@ h1 {
 .invisible {
   overflow: hidden;
 }
+
+.exit-btn {
+  position: absolute;
+  background-color: #4568e9;
+  top: 0;
+  left: 0;
+  height: 35px;
+  width: 35px;
+  z-index: 1000;
+  border: 1px solid white;
+  font-weight: normal;
+  font-size: 1.1vw;
+  letter-spacing: 3pt;
+  font-family: "IBM Plex Mono", monospace;
+  box-sizing: border-box;
+  opacity: 0.7;
+  color: black;
+}
+
+.exit-btn p {
+  font-weight: 500;
+  font-weight: normal;
+  font-size: 1.1vw;
+  letter-spacing: 3pt;
+  font-family: "IBM Plex Mono", monospace;
+  box-sizing: border
+}
+
+.exit-btn:hover {
+  cursor: pointer;
+}
